--- a/package.json
+++ b/package.json
@@ -12,19 +12,12 @@
     "@polkadot/ui-settings": "^0.53.1",
     "@polkadot/util": "^2.12.2",
     "@polkadot/util-crypto": "^2.12.2",
-    "axios": "^0.19.2",
-    "getobject": "^0.1.0",
-    "lodash": "^4.17.19",
-    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0"
   },
@@ -38,7 +31,7 @@
     "gh-pages": "^2.1.1"
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
