--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "author": "Parity Technologies <admin@parity.io>",
   "license": "Unlicense",
   "dependencies": {
-    "@polkadot/api": "^1.31.2",
+    "@polkadot/api": "^2.2.1",
     "@polkadot/api-contract": "^1.31.2",
-    "@polkadot/extension-dapp": "^0.32.1",
-    "@polkadot/types": "^1.31.2",
-    "@polkadot/ui-keyring": "^0.53.1",
-    "@polkadot/ui-settings": "^0.53.1",
-    "@polkadot/util": "^2.12.2",
-    "@polkadot/util-crypto": "^2.12.2",
+    "@polkadot/extension-dapp": "^0.34.1",
+    "@polkadot/types": "^2.2.1",
+    "@polkadot/ui-keyring": "^0.60.1",
+    "@polkadot/ui-settings": "^0.60.1",
+    "@polkadot/util": "^3.5.1",
+    "@polkadot/util-crypto": "^3.5.1",
     "@types/semantic-ui": "^2.2.7",
     "bn.js": "^5.1.3",
     "leaflet": "^1.7.1",
@@ -28,13 +28,22 @@
     "semantic-ui-react": "^0.88.0"
   },
   "devDependencies": {
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-only-warn": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
+    "babel-eslint": "10.x",
+    "eslint": "^6.6.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-node": "11.x",
+    "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
     "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
